tests/invalid/control_flow/unreachable.php
<?php

function alwaysReturnEarly(): void
{
    return;
    echo "this line is unreachable";
}

alwaysReturnEarly();

